# BRUCE_control

./: .gitignore  CMakeLists.txt  README.md
config/: config.yaml
include/: bruce_controller.hpp  main.hpp  utils.hpp
include/Robot/: bruce.hpp  robot.hpp
include/Trajectory/: CommonUtil.h  JointTrajectory.h
include/WBC/: Task.hpp  wbc_base.hpp  wbic.hpp  weighted_wbc.hpp
model/bruce/: model.config  model.sdf
model/bruce/urdf/: bruce.gv  bruce.urdf
model/bruce/xml/: bruce.xml  bruce_diaginertia.xml  bruce_fullinertia.xml  tmp.xml  tmp_w_freejoint.xml
model/worlds/: bruce.world
src/: bruce_controller.cpp  main.cpp
src/Robot/: robot.cpp
src/WBC/: wbc_base.cpp  wbic.cpp  weighted_wbc.cpp
tests/: test_eigen.cpp  test_main.cpp  test_pino.cpp  test_wbc.cpp
